Add hospital RAG agent implementation and integrate langchain-neo4j for enhanced Neo4j query handling in hospital Cypher chain. Update dependencies in pyproject.toml.

--- a/chatbot_api/src/pyproject.toml
+++ b/chatbot_api/src/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "opentelemetry-api==1.22.0",
     "pydantic==2.5.1",
     "uvicorn==0.25.0"
+    "langchain-neo4j"
 ]
 
 [project.optional-dependencies]
